--- a/frontAngular/src/app/components/sidebar/sidebar.component.html
+++ b/frontAngular/src/app/components/sidebar/sidebar.component.html
@@ -2,9 +2,9 @@
 <div class="logo">
     <a href="https://www.creative-tim.com" class="simple-text">
         <div class="logo-img">
-            <img src="/assets/img/angular2-logo-red.png"/>
+            <img src="/assets/img/mytroc_oeil.svg"/>
         </div>
-        Kaddem
+        TradePal
     </a>
 </div>
 <div class="sidebar-wrapper">
