--- a/frontAngular/src/app/Admin/Contrat/add/add.component.html
+++ b/frontAngular/src/app/Admin/Contrat/add/add.component.html
@@ -3,7 +3,7 @@
   <h3 class="title">Ajouter Un Nouveau Contrat !</h3>
   <br />
   <div class="form-container">
-    <form name="contractForm" [formGroup]="contractForm" novalidate>
+    <form name="claimForm" [formGroup]="claimForm" novalidate>
       <!--Date du contrat-->
       <mat-form-field color="accent" class="form-field" appearance="outline">
         <mat-label>Date Debut De Contrat</mat-label>
@@ -20,11 +20,11 @@
         <mat-datepicker #picker1></mat-datepicker>
         <mat-error
           *ngIf="
-            contractForm.controls.dateDebutContrat.touched &&
-            contractForm.controls.dateDebutContrat.invalid
+            claimForm.controls.dateDebutContrat.touched &&
+            claimForm.controls.dateDebutContrat.invalid
           "
         >
-          <span *ngIf="contractForm.controls.dateDebutContrat.errors.required"
+          <span *ngIf="claimForm.controls.dateDebutContrat.errors.required"
             >Veuillez choisir une date.</span
           >
         </mat-error>
@@ -45,11 +45,11 @@
         <mat-datepicker #picker2 color="primary"></mat-datepicker>
         <mat-error
           *ngIf="
-            contractForm.controls.dateFinContrat.touched &&
-            contractForm.controls.dateFinContrat.invalid
+            claimForm.controls.dateFinContrat.touched &&
+            claimForm.controls.dateFinContrat.invalid
           "
         >
-          <span *ngIf="contractForm.controls.dateFinContrat.errors.required"
+          <span *ngIf="claimForm.controls.dateFinContrat.errors.required"
             >Veuillez choisir une date.</span
           >
         </mat-error>
@@ -65,11 +65,11 @@
         </mat-select>
         <mat-error
           *ngIf="
-            contractForm.controls.specialite.touched &&
-            contractForm.controls.specialite.invalid
+            claimForm.controls.specialite.touched &&
+            claimForm.controls.specialite.invalid
           "
         >
-          <span *ngIf="contractForm.controls.specialite.errors.required"
+          <span *ngIf="claimForm.controls.specialite.errors.required"
             >Veuillez choisir une option.</span
           >
         </mat-error>
@@ -94,11 +94,11 @@
         </mat-select>
         <mat-error
           *ngIf="
-            contractForm.controls.montantContrat.touched &&
-            contractForm.controls.montantContrat.invalid
+            claimForm.controls.montantContrat.touched &&
+            claimForm.controls.montantContrat.invalid
           "
         >
-          <span *ngIf="contractForm.controls.montantContrat.errors.required"
+          <span *ngIf="claimForm.controls.montantContrat.errors.required"
             >Veuillez choisir une option.</span
           >
         </mat-error>
@@ -107,8 +107,8 @@
       <button
         mat-raised-button
         color="accent"
-        [disabled]="contractForm.invalid"
-        (click)="submit(contractForm.value)"
+        [disabled]="claimForm.invalid"
+        (click)="submit(claimForm.value)"
       >
         Valider
       </button>
