--- a/frontAngular/src/app/components/sidebar/sidebar.component.html
+++ b/frontAngular/src/app/components/sidebar/sidebar.component.html
@@ -6,6 +6,7 @@
         </div>
         TradePal
     </a>
+    
 </div>
 <div class="sidebar-wrapper">
   <div *ngIf="isMobileMenu()">
@@ -37,7 +38,26 @@
             <a class="nav-link" [routerLink]="[menuItem.path]">
                 <i class="material-icons">{{menuItem.icon}}</i>
                 <p>{{menuItem.title}}</p>
+                
             </a>
         </li>
     </ul>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+ 
+    <div class="d-flex justify-content-center align-items-center ">
+      <button class="btn btn-danger" (click)="logout()">Logout</button>
+    </div>
+    
 </div>
