--- a/frontAngular/src/app/Admin/Object/list-of-objects/list-of-objects.component.html
+++ b/frontAngular/src/app/Admin/Object/list-of-objects/list-of-objects.component.html
@@ -8,7 +8,7 @@
     
 
       <div class="card">
-        <div class="card-header card-header-danger">
+        <div class="card-header card-header-danger" *ngIf="currentUser === 'admin'">
         
           <button
             [ngClass]="['btn', 'btn-outline-dark']"
@@ -46,7 +46,7 @@
               <th>Catégorie</th>
               <th>Date Expiration </th>
               <th>Statut </th>
-              <th>Action</th>
+              <th *ngIf="currentUser === 'admin'">Action</th>
             </thead>
             <tbody>
               <tr *ngFor="let o of objects">
@@ -59,7 +59,7 @@
                   {{ o.status }}
                 </td>
                 
-                <td class="td-actions text-left">
+                <td class="td-actions text-left" *ngIf="currentUser === 'admin'">
                   <button
                     mat-raised-button
                     type="button"
