--- a/frontAngular/src/app/Admin/Organization/list-of-organizations/list-of-organizations.component.html
+++ b/frontAngular/src/app/Admin/Organization/list-of-organizations/list-of-organizations.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="card">
-        <div class="card-header card-header-danger">
+        <div class="card-header card-header-danger" *ngIf="currentUser === 'admin'">
           <button [ngClass]="['btn', 'btn-outline-dark']" (click)="onCreate()">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -40,7 +40,7 @@
               <th>Description</th>
               <th>Date Fondation</th>
               <th>Archived</th>
-              <th>Actions</th>
+              <th *ngIf="currentUser === 'admin'">Actions</th>
             </thead>
             <tbody>
               <tr *ngFor="let e of organizations">
@@ -55,7 +55,7 @@
                 <td>{{ e.foundingDate }}</td>
                 <td>{{ e.archived }}</td>
 
-                <td class="td-actions text-left">
+                <td class="td-actions text-left" *ngIf="currentUser === 'admin'">
                   <button
                     mat-raised-button
                     type="button"
