--- a/frontAngular/src/app/components/sidebar/sidebar.component.html
+++ b/frontAngular/src/app/components/sidebar/sidebar.component.html
@@ -43,20 +43,24 @@
         </li>
     </ul>
 
+   
     <br>
     <br>
     <br>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class=" d-flex flex-column justify-content-center align-items-center ">
+    <h4>{{usernameObject.username}}</h4>
+   
+    <h3>{{usernameObject.email}}</h3>
+  </div>
+
     <br>
     <br>
  
     <div class="d-flex justify-content-center align-items-center ">
+      
       <button class="btn btn-danger" (click)="logout()">Logout</button>
     </div>
     
